# ArgoFluxTest

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  config.toml  content.txt
.github/workflows/: docker-build.yml
argo/: deployment.yaml  service.yaml
src/: main.rs
templates/: index.html  testing.html
